# InkCV

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: README.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/api/ai/: chat.post.ts
apps/web/routes/api/ai/: chat.post.ts
apps/web/src/: aiProxyPolicy.ts  aiTransport.ts  desktopServices.ts  main.tsx
apps/web/src/__tests__/: aiProxyPolicy.test.ts
docs/: HANDOVER.md  PRIVACY.md  design.md
e2e/: desktop.spec.ts  helpers.ts  iphone.spec.ts  live-ai.spec.ts  mobile.spec.ts
scripts/: capture-release-assets.mjs  smoke-linux.sh  smoke-macos.sh  smoke-windows.ps1  verify-release-assets.mjs  write-checksums.mjs
