[package]
name = "inkcv-desktop"
version = "0.3.0"
description = "InkCV desktop shell"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"
keyring = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
